// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LandingPageSkeleton should match snapshot 1`] = `
<div>
  <div
    class="relative flex min-h-screen w-full flex-col bg-background-dark text-white font-['Space_Grotesk',sans-serif] overflow-x-hidden"
  >
    <header
      class="sticky top-0 z-50 w-full border-b border-solid border-border-dark bg-background-dark/80 backdrop-blur-md"
    >
      <div
        class="flex items-center justify-between whitespace-nowrap px-4 py-3 max-w-[1200px] mx-auto w-full"
      >
        <div
          class="flex items-center gap-4"
        >
          <div
            class="size-8 bg-slate-700 rounded animate-pulse"
          />
          <div
            class="h-5 w-24 bg-slate-700 rounded animate-pulse"
          />
        </div>
        <div
          class="hidden md:flex"
        >
          <div
            class="h-10 w-20 bg-slate-700 rounded animate-pulse"
          />
        </div>
        <div
          class="md:hidden"
        >
          <div
            class="h-8 w-8 bg-slate-700 rounded animate-pulse"
          />
        </div>
      </div>
    </header>
    <main
      class="flex-1 flex flex-col items-center w-full"
    >
      <div
        class="w-full px-4 py-12 md:py-20 max-w-[1200px]"
      >
        <div
          class="flex flex-col-reverse gap-10 lg:flex-row lg:items-center"
        >
          <div
            class="flex flex-col gap-6 lg:w-1/2 justify-center"
          >
            <div
              class="flex flex-col gap-4 text-left"
            >
              <div
                class="h-12 md:h-16 lg:h-20 bg-slate-700 rounded animate-pulse"
              />
              <div
                class="h-6 md:h-8 w-3/4 bg-slate-700 rounded animate-pulse"
              />
              <div
                class="h-6 md:h-8 w-full bg-slate-700 rounded animate-pulse"
              />
            </div>
            <div
              class="flex flex-wrap gap-4 pt-2"
            >
              <div
                class="h-12 w-40 bg-slate-700 rounded-lg animate-pulse"
              />
              <div
                class="h-12 w-40 bg-slate-700 rounded-lg animate-pulse"
              />
            </div>
          </div>
          <div
            class="lg:w-1/2 w-full flex justify-center"
          >
            <div
              class="w-full aspect-square max-w-[505px] rounded-2xl bg-slate-700 animate-pulse"
            />
          </div>
        </div>
      </div>
      <div
        class="w-full bg-surface-dark border-y border-border-dark"
      >
        <div
          class="max-w-[1200px] mx-auto px-4 py-8"
        >
          <div
            class="grid grid-cols-1 md:grid-cols-3 gap-6"
          >
            <div
              class="flex flex-col gap-1 p-4 rounded-lg"
            >
              <div
                class="h-5 w-32 bg-slate-700 rounded animate-pulse mb-2"
              />
              <div
                class="h-10 w-24 bg-slate-700 rounded animate-pulse"
              />
              <div
                class="h-4 w-20 bg-slate-700 rounded animate-pulse mt-2"
              />
            </div>
            <div
              class="flex flex-col gap-1 p-4 rounded-lg"
            >
              <div
                class="h-5 w-32 bg-slate-700 rounded animate-pulse mb-2"
              />
              <div
                class="h-10 w-24 bg-slate-700 rounded animate-pulse"
              />
              <div
                class="h-4 w-20 bg-slate-700 rounded animate-pulse mt-2"
              />
            </div>
            <div
              class="flex flex-col gap-1 p-4 rounded-lg"
            >
              <div
                class="h-5 w-32 bg-slate-700 rounded animate-pulse mb-2"
              />
              <div
                class="h-10 w-24 bg-slate-700 rounded animate-pulse"
              />
              <div
                class="h-4 w-20 bg-slate-700 rounded animate-pulse mt-2"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-full px-4 py-20 max-w-[1200px]"
      >
        <div
          class="flex flex-col gap-10 md:gap-16"
        >
          <div
            class="flex flex-col md:flex-row justify-between items-start md:items-end gap-6"
          >
            <div
              class="flex flex-col gap-4 max-w-[600px]"
            >
              <div
                class="h-10 w-48 bg-slate-700 rounded animate-pulse"
              />
              <div
                class="h-6 w-full bg-slate-700 rounded animate-pulse"
              />
            </div>
          </div>
          <div
            class="grid grid-cols-1 md:grid-cols-3 gap-6"
          >
            <div
              class="flex flex-col gap-4 rounded-xl border border-border-dark bg-surface-dark p-6"
            >
              <div
                class="w-12 h-12 bg-slate-700 rounded-lg animate-pulse"
              />
              <div
                class="h-6 w-3/4 bg-slate-700 rounded animate-pulse"
              />
              <div
                class="h-4 w-full bg-slate-700 rounded animate-pulse"
              />
              <div
                class="h-4 w-5/6 bg-slate-700 rounded animate-pulse"
              />
            </div>
            <div
              class="flex flex-col gap-4 rounded-xl border border-border-dark bg-surface-dark p-6"
            >
              <div
                class="w-12 h-12 bg-slate-700 rounded-lg animate-pulse"
              />
              <div
                class="h-6 w-3/4 bg-slate-700 rounded animate-pulse"
              />
              <div
                class="h-4 w-full bg-slate-700 rounded animate-pulse"
              />
              <div
                class="h-4 w-5/6 bg-slate-700 rounded animate-pulse"
              />
            </div>
            <div
              class="flex flex-col gap-4 rounded-xl border border-border-dark bg-surface-dark p-6"
            >
              <div
                class="w-12 h-12 bg-slate-700 rounded-lg animate-pulse"
              />
              <div
                class="h-6 w-3/4 bg-slate-700 rounded animate-pulse"
              />
              <div
                class="h-4 w-full bg-slate-700 rounded animate-pulse"
              />
              <div
                class="h-4 w-5/6 bg-slate-700 rounded animate-pulse"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-full bg-surface-dark border-y border-border-dark py-20"
      >
        <div
          class="max-w-[1200px] mx-auto px-4 flex flex-col gap-12"
        >
          <div
            class="flex flex-col items-center text-center gap-4"
          >
            <div
              class="h-10 w-64 bg-slate-700 rounded animate-pulse"
            />
            <div
              class="h-6 w-96 bg-slate-700 rounded animate-pulse"
            />
          </div>
          <div
            class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6"
          >
            <div
              class="flex flex-col overflow-hidden rounded-xl border border-border-dark bg-surface-dark"
            >
              <div
                class="aspect-video w-full bg-slate-700 animate-pulse"
              />
              <div
                class="p-5 flex flex-col gap-3"
              >
                <div
                  class="h-6 w-32 bg-slate-700 rounded animate-pulse"
                />
                <div
                  class="h-4 w-24 bg-slate-700 rounded animate-pulse"
                />
              </div>
            </div>
            <div
              class="flex flex-col overflow-hidden rounded-xl border border-border-dark bg-surface-dark"
            >
              <div
                class="aspect-video w-full bg-slate-700 animate-pulse"
              />
              <div
                class="p-5 flex flex-col gap-3"
              >
                <div
                  class="h-6 w-32 bg-slate-700 rounded animate-pulse"
                />
                <div
                  class="h-4 w-24 bg-slate-700 rounded animate-pulse"
                />
              </div>
            </div>
            <div
              class="flex flex-col overflow-hidden rounded-xl border border-border-dark bg-surface-dark"
            >
              <div
                class="aspect-video w-full bg-slate-700 animate-pulse"
              />
              <div
                class="p-5 flex flex-col gap-3"
              >
                <div
                  class="h-6 w-32 bg-slate-700 rounded animate-pulse"
                />
                <div
                  class="h-4 w-24 bg-slate-700 rounded animate-pulse"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
    <footer
      class="w-full border-t border-border-dark bg-background-dark pt-16 pb-8"
    >
      <div
        class="max-w-[1200px] mx-auto px-4"
      >
        <div
          class="h-32 bg-slate-700 rounded animate-pulse"
        />
      </div>
    </footer>
  </div>
</div>
`;

exports[`Loading should match snapshot 1`] = `
<div>
  <div
    class="min-h-screen flex items-center justify-center bg-background-dark"
  >
    <div
      class="text-center"
    >
      <div
        class="animate-spin rounded-full border-b-2 border-primary mx-auto mb-4 h-12 w-12"
      />
      <p
        class="text-slate-300 "
      >
        Loading...
      </p>
    </div>
  </div>
</div>
`;

exports[`Loading should match snapshot inline 1`] = `
<div>
  <div
    class="flex items-center justify-center"
  >
    <div
      class="animate-spin rounded-full border-b-2 border-primary  h-12 w-12"
    />
    <p
      class="text-slate-300 ml-3"
    >
      Loading...
    </p>
  </div>
</div>
`;

exports[`Loading should match snapshot with message 1`] = `
<div>
  <div
    class="min-h-screen flex items-center justify-center bg-background-dark"
  >
    <div
      class="text-center"
    >
      <div
        class="animate-spin rounded-full border-b-2 border-primary mx-auto mb-4 h-12 w-12"
      />
      <p
        class="text-slate-300 "
      >
        Loading data...
      </p>
    </div>
  </div>
</div>
`;

exports[`Loading should match snapshot with size 1`] = `
<div>
  <div
    class="min-h-screen flex items-center justify-center bg-background-dark"
  >
    <div
      class="text-center"
    >
      <div
        class="animate-spin rounded-full border-b-2 border-primary mx-auto mb-4 h-16 w-16"
      />
      <p
        class="text-slate-300 "
      >
        Loading...
      </p>
    </div>
  </div>
</div>
`;

exports[`SkeletonCards should match snapshot 1`] = `
<div>
  <div
    class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"
  >
    <div
      class="rounded-lg border bg-card text-card-foreground animate-pulse"
    >
      <div
        class="flex flex-col space-y-1.5 p-6"
      >
        <div
          class="h-6 bg-muted rounded w-3/4"
        />
        <div
          class="h-4 bg-muted rounded w-1/2 mt-2"
        />
      </div>
      <div
        class="p-6 pt-0"
      >
        <div
          class="h-4 bg-muted rounded w-full"
        />
        <div
          class="h-4 bg-muted rounded w-2/3 mt-2"
        />
      </div>
    </div>
    <div
      class="rounded-lg border bg-card text-card-foreground animate-pulse"
    >
      <div
        class="flex flex-col space-y-1.5 p-6"
      >
        <div
          class="h-6 bg-muted rounded w-3/4"
        />
        <div
          class="h-4 bg-muted rounded w-1/2 mt-2"
        />
      </div>
      <div
        class="p-6 pt-0"
      >
        <div
          class="h-4 bg-muted rounded w-full"
        />
        <div
          class="h-4 bg-muted rounded w-2/3 mt-2"
        />
      </div>
    </div>
    <div
      class="rounded-lg border bg-card text-card-foreground animate-pulse"
    >
      <div
        class="flex flex-col space-y-1.5 p-6"
      >
        <div
          class="h-6 bg-muted rounded w-3/4"
        />
        <div
          class="h-4 bg-muted rounded w-1/2 mt-2"
        />
      </div>
      <div
        class="p-6 pt-0"
      >
        <div
          class="h-4 bg-muted rounded w-full"
        />
        <div
          class="h-4 bg-muted rounded w-2/3 mt-2"
        />
      </div>
    </div>
    <div
      class="rounded-lg border bg-card text-card-foreground animate-pulse"
    >
      <div
        class="flex flex-col space-y-1.5 p-6"
      >
        <div
          class="h-6 bg-muted rounded w-3/4"
        />
        <div
          class="h-4 bg-muted rounded w-1/2 mt-2"
        />
      </div>
      <div
        class="p-6 pt-0"
      >
        <div
          class="h-4 bg-muted rounded w-full"
        />
        <div
          class="h-4 bg-muted rounded w-2/3 mt-2"
        />
      </div>
    </div>
    <div
      class="rounded-lg border bg-card text-card-foreground animate-pulse"
    >
      <div
        class="flex flex-col space-y-1.5 p-6"
      >
        <div
          class="h-6 bg-muted rounded w-3/4"
        />
        <div
          class="h-4 bg-muted rounded w-1/2 mt-2"
        />
      </div>
      <div
        class="p-6 pt-0"
      >
        <div
          class="h-4 bg-muted rounded w-full"
        />
        <div
          class="h-4 bg-muted rounded w-2/3 mt-2"
        />
      </div>
    </div>
    <div
      class="rounded-lg border bg-card text-card-foreground animate-pulse"
    >
      <div
        class="flex flex-col space-y-1.5 p-6"
      >
        <div
          class="h-6 bg-muted rounded w-3/4"
        />
        <div
          class="h-4 bg-muted rounded w-1/2 mt-2"
        />
      </div>
      <div
        class="p-6 pt-0"
      >
        <div
          class="h-4 bg-muted rounded w-full"
        />
        <div
          class="h-4 bg-muted rounded w-2/3 mt-2"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SkeletonCards should match snapshot with count 1`] = `
<div>
  <div
    class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"
  >
    <div
      class="rounded-lg border bg-card text-card-foreground animate-pulse"
    >
      <div
        class="flex flex-col space-y-1.5 p-6"
      >
        <div
          class="h-6 bg-muted rounded w-3/4"
        />
        <div
          class="h-4 bg-muted rounded w-1/2 mt-2"
        />
      </div>
      <div
        class="p-6 pt-0"
      >
        <div
          class="h-4 bg-muted rounded w-full"
        />
        <div
          class="h-4 bg-muted rounded w-2/3 mt-2"
        />
      </div>
    </div>
    <div
      class="rounded-lg border bg-card text-card-foreground animate-pulse"
    >
      <div
        class="flex flex-col space-y-1.5 p-6"
      >
        <div
          class="h-6 bg-muted rounded w-3/4"
        />
        <div
          class="h-4 bg-muted rounded w-1/2 mt-2"
        />
      </div>
      <div
        class="p-6 pt-0"
      >
        <div
          class="h-4 bg-muted rounded w-full"
        />
        <div
          class="h-4 bg-muted rounded w-2/3 mt-2"
        />
      </div>
    </div>
    <div
      class="rounded-lg border bg-card text-card-foreground animate-pulse"
    >
      <div
        class="flex flex-col space-y-1.5 p-6"
      >
        <div
          class="h-6 bg-muted rounded w-3/4"
        />
        <div
          class="h-4 bg-muted rounded w-1/2 mt-2"
        />
      </div>
      <div
        class="p-6 pt-0"
      >
        <div
          class="h-4 bg-muted rounded w-full"
        />
        <div
          class="h-4 bg-muted rounded w-2/3 mt-2"
        />
      </div>
    </div>
  </div>
</div>
`;
